# raft-example-rs

./: Cargo.toml
api/: Cargo.toml  build.rs
api/src/: api.proto
common/: Cargo.toml
common/src/: config.rs  lib.rs
coordinator/: Cargo.toml
coordinator/src/: config.rs  main.rs  pinger.rs  repository.rs  server.rs
core/: Cargo.toml
node/: Cargo.toml
node/src/: coordinator.rs  coordinator_service.rs  main.rs  ping.rs  server.rs  state.rs
