[workspace]
resolver = "2"
members = [
    "api",
    "core",
    "node",
    "coordinator",
]

[workspace.dependencies]
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["full"] }
protoc-bin-vendored = "3.1.0"
prost = "0.13.4"
tonic = "0.12.3"
tonic-build = "0.12.3"
portpicker = "0.1.1"