[workspace]
resolver = "2"
members = [
    "api",
    "common",
    "node",
    "coordinator",
]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
config = "0.15.6"
tokio = { version = "1.43.0", features = ["full"] }
protoc-bin-vendored = "3.1.0"
prost = "0.13.4"
tonic = "0.12.3"
tonic-build = "0.12.3"
portpicker = "0.1.1"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
