[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }

chrono = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
time = "0.3.37"
